add mongo db atlas

--- a/development.env
+++ b/development.env
@@ -1,1 +1,1 @@
-MONGOSE_URL=mongodb://localhost:27017/learning
+MONGOSE_URL=mongodb+srv://salar:kzXQOJ0ywtB2dpwY@cluster0.6uys4fz.mongodb.net/?retryWrites=true&w=majority
